--- a/index.html
+++ b/index.html
@@ -52,15 +52,18 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title" style="font-size:20px">Towards Preventing Overreliance on Task-Oriented Conversational AI Through Accountability Modeling</h1>
+            <h1 class="title is-1 publication-title" style="font-size:30px">Towards Preventing Overreliance on Task-Oriented Conversational AI Through Accountability Modeling</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Suvodip Dey</a><sup>*</sup>,</span>
+                <a href="https://sites.google.com/view/suvodip-dey" target="_blank">Suvodip Dey</a></sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
+                  <a href="" target="_blank">Yi-Jyun Sun</a></sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
+                    <a href="https://siebelschool.illinois.edu/about/people/faculty/gokhan" target="_blank">Gokhan Tur</a></sup>,</span>
+                  </span>
+                  <span class="author-block">
+                    <a href="https://siebelschool.illinois.edu/about/people/faculty/dilek" target="_blank">Dilek Hakkani-Tür</a>
                   </span>
                   </div>
 
