--- a/index.html
+++ b/index.html
@@ -67,9 +67,16 @@
                   </span>
                   </div>
 
+                  <img alt="Conversational AI Lab" src="static/images/ConvAIText.png" style="width:10%" />
+
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Conferance name and year</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <span class="author-block"><a href="https://uiuc-conversational-ai-lab.github.io/" target="_blank">ConvAI Lab</a><br></span>
+                    <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
+                  </div> 
+                  
+                  <div class="is-size-5 publication-authors">
+                    <span class="author-block">University of Illinois at Urbana Champaign<br></span>
+                    <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
                   </div>
 
                   <div class="column has-text-centered">
