--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>ReSpAct</title>
+  <title>AccountableDST</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -116,7 +116,7 @@
               </span> -->
               
               <!-- Notebook LM link -->
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="https://notebooklm.google.com/notebook/5caa79d2-1bfb-46e0-8dbb-fbb997a5761a/audio" target="_blank"
                 class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
@@ -124,7 +124,7 @@
                 </span>
                 <span>Notebook LM</span>
               </a>
-            </span>
+            </span> -->
 
                 <!-- ArXiv abstract Link -->
                 <!-- <span class="link-block">
