--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
                   </span>
                   </div>
 
-                  <img alt="Conversational AI Lab" src="static/images/ConvAIText.png" style="width:10%" />
+                  <!-- <img alt="Conversational AI Lab" src="static/images/ConvAIText.png" style="width:10%" /> -->
 
-                  <div class="is-size-5 publication-authors">
+                  <!-- <div class="is-size-5 publication-authors">
                     <span class="author-block"><a href="https://uiuc-conversational-ai-lab.github.io/" target="_blank">ConvAI Lab</a><br></span>
-                    <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
-                  </div> 
+                    
+                  </div>  -->
                   
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">University of Illinois at Urbana Champaign<br></span>
+                    <span class="author-block"><a href="https://uiuc-conversational-ai-lab.github.io/" target="_blank">ConvAI Lab</a>, University of Illinois at Urbana Champaign<br></span>
                     <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
                   </div>
 
