--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
                         <a href="https://arxiv.org/abs/2501.10316" target="_blank"
-                        class="external-link button is-normal is-rounded is-dark">
+                        class="external-link button is-small is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
                         </span>
