--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   </span>
                   </div>
 
-                  <img alt="Conversational AI Lab" src="static/images/ConvAIText.png" style="width:10%" />
+                  <img alt="Conversational AI Lab" src="static/images/ConvAIText.png" style="width:8%" />
 
                   <!-- <div class="is-size-5 publication-authors">
                     <span class="author-block"><a href="https://uiuc-conversational-ai-lab.github.io/" target="_blank">ConvAI Lab</a><br></span>
@@ -76,7 +76,7 @@
                   </div>  -->
                   
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">ConvAI Lab, University of Illinois at Urbana Champaign<br></span>
+                    <span class="author-block">ConvAI Lab, University of Illinois at Urbana-Champaign<br></span>
                     <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
                   </div>
 
@@ -96,7 +96,7 @@
                   <!-- Github link -->
                   <span class="link-block">
                     <a href="https://github.com/uiuc-conversational-ai-lab/Accountable-DST" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
+                    class="external-link button is-small is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
