--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 <!-- End teaser video -->
 
 <!-- Paper abstract -->
-<section class="section">
+<!-- <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -197,7 +197,29 @@
       </div>
     </div>
   </div>
+</section> -->
+
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Abstract</h2>
+        <div class="row">
+          <div class="column left">
+            <p>Recent LLMs have enabled significant advancements for conversational agents. However, they are also well-known to hallucinate, i.e., they often produce responses that seem plausible but are not factually correct. On the other hand, users tend to over-rely on LLM-based AI agents; they accept the AI’s suggestion even when it is wrong. Adding good friction, such as explanations or getting user confirmations, has been proposed as a mitigation in AI-supported decision-making systems. In this paper, we propose an accountability model for LLM-based task-oriented dialogue agents to address user overreliance via friction turns in cases of model uncertainty and errors associated with dialogue state tracking (DST). The accountability model is an augmented LLM with an additional accountability head, which functions as a binary classifier to predict the slots of the dialogue states. We perform our experiments with three backbone LLMs (Llama, Mistral, Gemma) on two established task-oriented datasets (MultiWOZ and Snips). Our empirical findings demonstrate that this approach not only enables reliable estimation of AI agent errors but also guides the LLM decoder in generating more accurate actions. We observe around 3\% absolute improvement in joint goal accuracy by incorporating accountability heads in modern LLMs for the MultiWOZ dataset. We also show that this method enables the agent to self-correct its actions, further boosting its performance by 3\%. Finally, we discuss the application of accountability modeling to prevent user overreliance by introducing friction.</p>
+          </div>
+          <div class="column right">ABC</div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
+
+<div class="row">
+  <div class="column left"><img src="images/cone.jpg" style="width:500px;height:600px;"></div>
+  <div class="column right">
+    <p>ALL I NEED IS ICE_CREAM</p>
+  </div>
 <!-- End paper abstract -->
 
 
