--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
   </div>
 </section> -->
 
-<section class="section">
+<!-- <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered">
       <div class="column is-full-width">
@@ -239,6 +239,18 @@
           </p>
         </div>     
       </div>
+    </div>
+  </div>
+</section> -->
+
+<section class="section">
+  <div style="clear: both;">
+    <div style="float: left; margin-right 1em;">
+      <img src="static/images/acc_dst_motivation2.jpg" alt="">
+    </div>
+    <div>
+      <h2>Some title text</h2>
+      <p>Some more text that will appear to the left of the image.</p>
     </div>
   </div>
 </section>
