--- a/index.html
+++ b/index.html
@@ -244,13 +244,20 @@
 </section> -->
 
 <section class="section">
-  <div style="clear: both;">
-    <div style="float: left; margin-right 1em;">
-      <img src="static/images/acc_dst_motivation2.jpg" alt="">
-    </div>
-    <div>
-      <h2>Some title text</h2>
-      <p>Some more text that will appear to the left of the image.</p>
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <div style="clear: both;">
+          
+          <div>
+            <h2>Some title text</h2>
+            <p>Some more text that will appear to the left of the image.</p>
+          </div>
+          <div style="float: right; margin-right 1em;">
+            <img src="static/images/acc_dst_motivation2.jpg" alt="">
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
