--- a/index.html
+++ b/index.html
@@ -247,10 +247,9 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered">
       <div class="column is-full-width">
+        <h2 class="title is-3">Accountability Modeling of Dialogue State Tracking</h2>
         <div style="clear: both;">
-          
           <div>
-            <h2>Some title text</h2>
             <p>Some more text that will appear to the left of the image.</p>
           </div>
           <div style="float: right; margin-right 1em;">
