--- a/index.html
+++ b/index.html
@@ -222,32 +222,32 @@
   </div>
 </section> -->
 
-<!-- <section class="section">
+<section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Conversational Agents: Why They Matter?</h2>
+        <h2 class="title is-3">Overreliance on Task-Oriented Dialogue Systems</h2>
         <div class="content has-text-justified">
           <p>
             In an increasingly complex digital landscape, conversational agents offer a way to bridge the gap between human needs and machine capabilities. These agents can assist us in navigating digital interfaces, support decision-making, and help accomplish goals that require contextual understanding.
           </p>
-          <figure class="image is-inline-block"> 
+          <!-- <figure class="image is-inline-block"> 
             <img src="static/images/framework2.png" alt="MY ALT TEXT"/>
           </figure>
           <p>
             <b>Existing approaches operate in a one-sided way</b>—executing commands without checking back for clarification. This approach can lead to errors and unmet expectations, especially in cases where precise details matter. However, with conversational agents, there is an added layer of communication, creating a back-and-forth that mirrors human conversation and allows users to guide the agent toward optimal outcomes.
-          </p>
+          </p> -->
         </div>     
       </div>
     </div>
   </div>
-</section> -->
+</section>
 
 <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Accountability Modeling of Dialogue State Tracking</h2>
+        <h2 class="title is-3">Accountability Modeling</h2>
         <div style="clear: both;">
           <div>
             <p>Some more text that will appear to the left of the image.</p>
@@ -261,7 +261,7 @@
   </div>
 </section>
 
-<section class="section">
+<!-- <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered">
       <div class="column is-full-width">
@@ -280,7 +280,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- Image carousel -->
 <!-- <section class="hero is-small">
@@ -332,7 +332,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">ReSpAct Approach</h2>
+        <h2 class="title is-3">Approach</h2>
         <p>          
           ReSpAct expands the typical action space of LLMs by adding "speak" actions, allowing agents to ask for guidance, confirm details, and receive feedback during tasks. This means that instead of assuming and potentially making errors, the agent can ask, “Is this what you had in mind?” before proceeding. This interactive loop lets agents adapt on the fly, making ReSpAct ideal for complex tasks in interactive environments.
         </p>        
