--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 <!-- End teaser video -->
 
 <!-- Paper abstract -->
-<section class="section">
+<!-- <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -197,7 +197,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- End paper abstract -->
 
@@ -226,7 +226,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Overreliance on Task-Oriented Dialogue Systems</h2>
+        <h2 class="title is-3">What is Overreliance on Task-Oriented Dialogue Systems?</h2>
         <div class="content has-text-justified">
           <p>
             In an increasingly complex digital landscape, conversational agents offer a way to bridge the gap between human needs and machine capabilities. These agents can assist us in navigating digital interfaces, support decision-making, and help accomplish goals that require contextual understanding.
@@ -247,7 +247,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Accountability Modeling</h2>
+        <h2 class="title is-3">How Accountability Modeling can prevent Overreliance?</h2>
         <div style="clear: both;">
           <div>
             <p>Some more text that will appear to the left of the image.</p>
