--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">What is Overreliance on Task-Oriented Dialogue Systems?</h2>
+        <h2 class="title is-3">Overreliance on Task-Oriented Conversational AI</h2>
         <div class="content has-text-justified">
           <p>
             In an increasingly complex digital landscape, conversational agents offer a way to bridge the gap between human needs and machine capabilities. These agents can assist us in navigating digital interfaces, support decision-making, and help accomplish goals that require contextual understanding.
@@ -253,7 +253,7 @@
             <p>Some more text that will appear to the left of the image.</p>
           </div>
           <div style="float: right; margin-right 1em;">
-            <img src="static/images/acc_dst_motivation2.jpg" alt="">
+            <img src="static/images/motivation.png" alt="">
           </div>
         </div>
       </div>
@@ -332,17 +332,41 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Approach</h2>
+        <h2 class="title is-3">Model Architecture</h2>
         <p>          
           ReSpAct expands the typical action space of LLMs by adding "speak" actions, allowing agents to ask for guidance, confirm details, and receive feedback during tasks. This means that instead of assuming and potentially making errors, the agent can ask, “Is this what you had in mind?” before proceeding. This interactive loop lets agents adapt on the fly, making ReSpAct ideal for complex tasks in interactive environments.
         </p>        
         <div class="has-text-centered"> 
-          <figure class="image is-inline-block" style="width: 50%;"> 
-            <img src="static/images/respact-ver3.png" alt="MY ALT TEXT"/>
+          <figure class="image is-inline-block" style="width: 60%;"> 
+            <img src="static/images/arc.png" alt="MY ALT TEXT"/>
           </figure>
           <p>
             Task-oriented conversational agents that ask questions, request feedback, and adapt their strategies based on user input.
           </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Results</h2>
+        <p>          
+          ReSpAct expands the typical action space of LLMs by adding "speak" actions, allowing agents to ask for guidance, confirm details, and receive feedback during tasks. This means that instead of assuming and potentially making errors, the agent can ask, “Is this what you had in mind?” before proceeding. This interactive loop lets agents adapt on the fly, making ReSpAct ideal for complex tasks in interactive environments.
+        </p>        
+        <div class="has-text-centered"> 
+          <figure class="image is-inline-block" style="width: 60%;"> 
+            <img src="static/images/result.png" alt="MY ALT TEXT"/>
+          </figure>
+          <p>
+            Task-oriented conversational agents that ask questions, request feedback, and adapt their strategies based on user input.
+          </p>
+          <figure class="image is-inline-block" style="width: 60%;"> 
+            <img src="static/images/acc_example.png" alt="MY ALT TEXT"/>
+          </figure>
         </div>
       </div>
     </div>
