--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <h2 class="title is-3">How Accountability Modeling can prevent Overreliance?</h2>
         <div style="clear: both;">
           <div>
-            <p>Some more text that will appear to the left of the image.</p>
+            <p>Some more text that will appear to the left of the image. abckdldldl</p>
           </div>
           <div style="float: right; margin-right 1em;">
             <img src="static/images/motivation.png" alt="">
@@ -337,7 +337,7 @@
           ReSpAct expands the typical action space of LLMs by adding "speak" actions, allowing agents to ask for guidance, confirm details, and receive feedback during tasks. This means that instead of assuming and potentially making errors, the agent can ask, “Is this what you had in mind?” before proceeding. This interactive loop lets agents adapt on the fly, making ReSpAct ideal for complex tasks in interactive environments.
         </p>        
         <div class="has-text-centered"> 
-          <figure class="image is-inline-block" style="width: 60%;"> 
+          <figure class="image is-inline-block"> 
             <img src="static/images/arc.png" alt="MY ALT TEXT"/>
           </figure>
           <p>
@@ -358,13 +358,13 @@
           ReSpAct expands the typical action space of LLMs by adding "speak" actions, allowing agents to ask for guidance, confirm details, and receive feedback during tasks. This means that instead of assuming and potentially making errors, the agent can ask, “Is this what you had in mind?” before proceeding. This interactive loop lets agents adapt on the fly, making ReSpAct ideal for complex tasks in interactive environments.
         </p>        
         <div class="has-text-centered"> 
-          <figure class="image is-inline-block" style="width: 60%;"> 
+          <figure class="image is-inline-block"> 
             <img src="static/images/result.png" alt="MY ALT TEXT"/>
           </figure>
           <p>
             Task-oriented conversational agents that ask questions, request feedback, and adapt their strategies based on user input.
           </p>
-          <figure class="image is-inline-block" style="width: 60%;"> 
+          <figure class="image is-inline-block"> 
             <img src="static/images/acc_example.png" alt="MY ALT TEXT"/>
           </figure>
         </div>
