--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <p>Some more text that will appear to the left of the image. abckdldldl</p>
           </div>
           <div style="float: right; margin-right 1em;">
-            <img src="static/images/motivation.png" alt="">
+            <img src="static/images/acc_dst_motivation2.jpg" alt="">
           </div>
         </div>
       </div>
@@ -364,6 +364,21 @@
           <p>
             Task-oriented conversational agents that ask questions, request feedback, and adapt their strategies based on user input.
           </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Examples of Dialogue State Correction using Accountability Modeling</h2>
+        <p>          
+          ReSpAct expands the typical action space of LLMs by adding "speak" actions, allowing agents to ask for guidance, confirm details, and receive feedback during tasks. This means that instead of assuming and potentially making errors, the agent can ask, “Is this what you had in mind?” before proceeding. This interactive loop lets agents adapt on the fly, making ReSpAct ideal for complex tasks in interactive environments.
+        </p>        
+        <div class="has-text-centered"> 
           <figure class="image is-inline-block"> 
             <img src="static/images/acc_example.png" alt="MY ALT TEXT"/>
           </figure>
@@ -472,13 +487,13 @@
   </section> -->
 <!--End paper poster -->
 
-<section class="section" id="Acknowledgements">
+<!-- <section class="section" id="Acknowledgements">
   <div class="container is-max-desktop content">
     <h2 class="title">Implications and the Future of Conversational Agents</h2>
     <p>
       By embedding conversational checkpoints within its reasoning process, ReSpAct addresses longstanding issues like error propagation, task ambiguity, and rigid agent behavior. In interactive environments like WebShop and AlfWorld, ReSpAct's approach not only reduces errors during task completion but also enables agents to align more closely with user intent by actively involving users in decision-making. This responsiveness transforms the agent into a collaborative partner rather than a passive tool.
     </p>
-  </section>
+  </section> -->
 
 
 <!--BibTex citation -->
