--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
           <div>
             <p>Some more text that will appear to the left of the image. abckdldldl</p>
           </div>
-          <div style="float: right; margin-right 1em;">
-            <img src="static/images/acc_dst_motivation2.jpg" alt="">
+          <div style="float: right; margin-right 1em; width: 40%;">
+            <img src="static/images/motivation.png" alt="">
           </div>
         </div>
       </div>
@@ -353,7 +353,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Results</h2>
+        <h2 class="title is-3">Performance</h2>
         <p>          
           ReSpAct expands the typical action space of LLMs by adding "speak" actions, allowing agents to ask for guidance, confirm details, and receive feedback during tasks. This means that instead of assuming and potentially making errors, the agent can ask, “Is this what you had in mind?” before proceeding. This interactive loop lets agents adapt on the fly, making ReSpAct ideal for complex tasks in interactive environments.
         </p>        
@@ -374,7 +374,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Examples of Dialogue State Correction using Accountability Modeling</h2>
+        <h2 class="title is-3">Dialogue State Correction using Accountability Modeling</h2>
         <p>          
           ReSpAct expands the typical action space of LLMs by adding "speak" actions, allowing agents to ask for guidance, confirm details, and receive feedback during tasks. This means that instead of assuming and potentially making errors, the agent can ask, “Is this what you had in mind?” before proceeding. This interactive loop lets agents adapt on the fly, making ReSpAct ideal for complex tasks in interactive environments.
         </p>        
