--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
   </div>
 </section>
 
-<section class="section">
+<!-- <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered">
       <div class="column is-full-width">
@@ -261,7 +261,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- <section class="section">
   <div class="container is-max-desktop">
@@ -334,6 +334,25 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered">
       <div class="column is-full-width">
+        <h2 class="title is-3">How Accountability Modeling can prevent Overreliance?</h2>
+        <p>          
+          ReSpAct expands the typical action space of LLMs by adding "speak" actions, allowing agents to ask for guidance, confirm details, and receive feedback during tasks. This means that instead of assuming and potentially making errors, the agent can ask, “Is this what you had in mind?” before proceeding. This interactive loop lets agents adapt on the fly, making ReSpAct ideal for complex tasks in interactive environments.
+        </p>        
+        <div class="has-text-centered"> 
+          <figure class="image is-inline-block" style="width: 60%"> 
+            <img src="static/images/motivation.png" alt="MY ALT TEXT"/>
+            <figcaption>Overview</figcaption>
+          </figure>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-full-width">
         <h2 class="title is-3">Model Architecture</h2>
         <p>          
           ReSpAct expands the typical action space of LLMs by adding "speak" actions, allowing agents to ask for guidance, confirm details, and receive feedback during tasks. This means that instead of assuming and potentially making errors, the agent can ask, “Is this what you had in mind?” before proceeding. This interactive loop lets agents adapt on the fly, making ReSpAct ideal for complex tasks in interactive environments.
@@ -341,6 +360,7 @@
         <div class="has-text-centered"> 
           <figure class="image is-inline-block" style="width: 80%"> 
             <img src="static/images/arc.png" alt="MY ALT TEXT"/>
+            <figcaption>Model Architecture</figcaption>
           </figure>
           <p>
             Task-oriented conversational agents that ask questions, request feedback, and adapt their strategies based on user input.
