--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         <div class="has-text-centered"> 
           <figure class="image is-inline-block" style="width: 60%"> 
             <img src="static/images/motivation.png" alt="MY ALT TEXT"/>
-            <figcaption>Overview</figcaption>
+            <figcaption>Figure 1: Overview of Accountability Modeling.</figcaption>
           </figure>
         </div>
       </div>
@@ -358,13 +358,10 @@
           ReSpAct expands the typical action space of LLMs by adding "speak" actions, allowing agents to ask for guidance, confirm details, and receive feedback during tasks. This means that instead of assuming and potentially making errors, the agent can ask, “Is this what you had in mind?” before proceeding. This interactive loop lets agents adapt on the fly, making ReSpAct ideal for complex tasks in interactive environments.
         </p>        
         <div class="has-text-centered"> 
-          <figure class="image is-inline-block" style="width: 80%"> 
+          <figure class="image is-inline-block" style="width: 75%"> 
             <img src="static/images/arc.png" alt="MY ALT TEXT"/>
-            <figcaption>Model Architecture</figcaption>
+            <figcaption>Figure 2: Model architecture of the LLM-based generative accountability modeling for DST.</figcaption>
           </figure>
-          <p>
-            Task-oriented conversational agents that ask questions, request feedback, and adapt their strategies based on user input.
-          </p>
         </div>
       </div>
     </div>
@@ -382,10 +379,9 @@
         <div class="has-text-centered"> 
           <figure class="image is-inline-block"> 
             <img src="static/images/result.png" alt="MY ALT TEXT"/>
+            <figcaption>Figure 3: Comparison of the DST performance on the test subsets of the MultiWOZ and Snips datasets.</figcaption>
+          
           </figure>
-          <p>
-            Task-oriented conversational agents that ask questions, request feedback, and adapt their strategies based on user input.
-          </p>
         </div>
       </div>
     </div>
@@ -401,8 +397,10 @@
           ReSpAct expands the typical action space of LLMs by adding "speak" actions, allowing agents to ask for guidance, confirm details, and receive feedback during tasks. This means that instead of assuming and potentially making errors, the agent can ask, “Is this what you had in mind?” before proceeding. This interactive loop lets agents adapt on the fly, making ReSpAct ideal for complex tasks in interactive environments.
         </p>        
         <div class="has-text-centered"> 
-          <figure class="image is-inline-block" style="width: 80%"> 
+          <figure class="image is-inline-block" style="width: 90%"> 
             <img src="static/images/acc_example.png" alt="MY ALT TEXT"/>
+            <figcaption>Figure 4: Illustrative example of dialogue state corrections.</figcaption>
+           
           </figure>
         </div>
       </div>
