--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <h2 class="title is-3">Overreliance on Task-Oriented Conversational AI</h2>
         <div class="content has-text-justified">
           <p>
-            Conversational agents have reached remarkable advancements with the advent of large language models (LLMs). Despite their impressive capabilities, these models frequently suffer from the issue of hallucinations, where they generate information that is incorrect or not grounded in reality. Moreover, users often tend to over-rely on LLM-based AI agents, accepting the AI's suggestions even when they are erroneous~\cite{ai-overreliance, trust-reliance-ai}. In the context of task-oriented conversations, such overreliance can lead to incorrect or incomplete task execution, thereby undermining the system's reliability. This work explores accountability modeling to prevent overreliance on task-oriented conversational AI.
+            Conversational agents have reached remarkable advancements with the advent of large language models (LLMs). Despite their impressive capabilities, these models frequently suffer from the issue of hallucinations, where they generate information that is incorrect or not grounded in reality. Moreover, users often tend to over-rely on LLM-based AI agents, accepting the AI's suggestions even when they are erroneous. In the context of task-oriented conversations, such overreliance can lead to incorrect or incomplete task execution, thereby undermining the system's reliability. This work explores accountability modeling to prevent overreliance on task-oriented conversational AI.
           </p>
           <!-- <figure class="image is-inline-block"> 
             <img src="static/images/framework2.png" alt="MY ALT TEXT"/>
