--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
       <div class="column is-full-width">
         <h2 class="title is-3">Dialogue State Correction using Accountability Modeling</h2>
         <p>          
-          ReSpAct expands the typical action space of LLMs by adding "speak" actions, allowing agents to ask for guidance, confirm details, and receive feedback during tasks. This means that instead of assuming and potentially making errors, the agent can ask, “Is this what you had in mind?” before proceeding. This interactive loop lets agents adapt on the fly, making ReSpAct ideal for complex tasks in interactive environments.
+          Figure 4 shows illustrative examples of the model prediction from the MultiWOZ and Snips datasets. In the first example, the model detected a false positive slot (<i>restaurant-pricerange</i>) and filtered it to rectify the prediction. The second example contains a false negative slot (<i>attraction-type</i>), which is corrected successfully. In the third example, the model detects both false positive and false negative slots and successfully rectifies them. In the fourth example, the original prediction of the model is correct. However, self-correction adds an extra slot (<i>train-departure</i>), which makes the prediction wrong. The fifth one shows an instance where the algorithm partially corrects an error. The last two examples are from the Snips, where the algorithm successfully rectifies the prediction. 
         </p>    
         <br>    
         <div class="has-text-centered"> 
