--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title" style="font-size:30px">Towards Preventing Overreliance on Task-Oriented Conversational AI Through Accountability Modeling</h1>
+            <h1 class="title is-1 publication-title" style="font-size:30px">Know Your Mistakes: Towards Preventing Overreliance on Task-Oriented Conversational AI Through Accountability Modeling</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
@@ -341,8 +341,8 @@
         <br>   
         <div class="has-text-centered"> 
           <figure class="image is-inline-block" style="width: 60%"> 
-            <img src="static/images/motivation.png" alt="MY ALT TEXT"/>
-            <figcaption>Figure 1: Overview of Accountability Modeling.</figcaption>
+            <img src="static/images/amd_motivation.png" alt="MY ALT TEXT"/>
+            <figcaption>Figure 1: Overview of Accountability Modeling. The model simultaneously generates the dialogue state and estimates slot probabilities (of being included in the dialogue state), then detects potential errors using the estimated slot probabilities. The errors can either be self-corrected or confirmed by the user via friction turns.</figcaption>
           </figure>
         </div>
         <br>
