--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
         <br>   
         <div class="has-text-centered"> 
           <figure class="image is-inline-block"> 
-            <img src="static/images/result.png" alt="MY ALT TEXT"/>
+            <img src="static/images/amd_result.png" alt="MY ALT TEXT"/>
             <figcaption>Figure 3: Comparison of the DST performance on the test subsets of the MultiWOZ and Snips datasets.</figcaption>
           
           </figure>
